+2003-08-08 Bernardo Innocenti <bernie@develer.com> + + PR target/9697 + PR...

+2003-08-08  Bernardo Innocenti  <bernie@develer.com>
+
+       PR target/9697
+       PR target/11777
+       * longlong.h (count_leading_zeros): Exclude on __mcpu32__.

From-SVN: r70255